feat: implement reference client and core planning refactor (#36)
- Add Spring Boot reference client using a framework-agnostic WebFlux transport.
- Implement 'Demo Mode' for automated workflow orchestration and MCP tool execution.
- Refactor planning into a pipeline-based architecture (Preparation/Execution).
- Move planning logic to core for reuse across Server and CLI.
- Fix GraalVM native support for LangChain4j (Anthropic/Gemini) and polymorphic serialization.
- Decouple from Spring AI MCP to avoid API churn and prioritize architectural stability.

Resolve: #33

Signed-off-by: Aleksandr Suvorov <asuvorov@hensu.io>